[package]
name = "mcsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.1.1"
cli = "0.0.1"
console = "0.15.5"
futures-util = "0.3.25"
indicatif = "0.17.3"
regex = "1.7.1"
reqwest = "0.11.14"
tokio = { version = "1.24.2", features = ["full"] }
walkdir = "2.3.2"
