[package]
name = "mcsm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = [ "attributes", "tokio1" ] }
clap = { version = "4.1.1", features = ["derive"] }
console = "0.15.5"
futures-util = "0.3.25"
indicatif = "0.17.3"
regex = "1.7.1"
reqwest = "0.11.14"
serde = { version = "1.0.152", features = ["derive"] }
tokio = { version = "1.24.2", features = ["full"] }
toml = "0.5.11"
walkdir = "2.3.2"
